--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 	
 <head>
 	<meta charset="UTF-8" />
-	<title>Chaos Chat</title>
+	<title>Chaos Cat</title>
 	
 	<script type="text/javascript" src="js/lib/jquery-1.6.1.min.js"></script>
 	<script type="text/javascript" src="js/lib/ember-0.9.5.min.js"></script>
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<h1>Chaos Chat</h1>
+	<h1>Chaos Cat</h1>
 	
 	<script type="text/x-handlebars">
 		<div id="login"{{bindAttr class="Chat.loginController.loggedIn"}}>
